fix bug: mobile menu: hide menu when click to item fotter: align left text

--- a/src/layouts/footer/footer.component.scss
+++ b/src/layouts/footer/footer.component.scss
@@ -95,6 +95,7 @@ footer {
     }
   }
   button {
+    text-align: left;
     outline: none;
     background: transparent;
     padding: 0;
