--- a/src/layouts/header/header.component.scss
+++ b/src/layouts/header/header.component.scss
@@ -20,18 +20,16 @@
       width: 100%;
       height: 100%;
     }
-    &[aria-expanded="false"]{
       .navbar-toggler-icon {
         background: url("../../assets/imgs/icons/color/burger.svg") center no-repeat;
-        background-size: contain;
+        background-size: auto;
       }
-    }
-    &[aria-expanded="true"] {
-      .navbar-toggler-icon {
+
+      .navbar-toggler-icon.close {
         background: url("../../assets/imgs/icons/basic/close.svg") center no-repeat;
-        background-size: contain;
+        background-size: auto;
       }
-    }
+
   }
   .nav-menu {
     .nav-item {
@@ -91,7 +89,7 @@
         }
         li { display: block}
         .dropdown-item {
-          padding: 0;
+          padding: var(--spacer-2) 0;
           @media (min-width: 992px) {
             padding: var(--spacer-2) var(--spacer-6);
           }
